# Changelog
All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).


## [Unreleased]
### Added
* Seed script for database
* Database adapter for PostgreSQL
* Store for campaigns
* Dockerize project

## [0.0.1] - 2022-02-18
### Added
* Entities for campaign manager
* Entities for town manager
* Basic GraphQL schema